fix: поправлен фон на телефоне при скроле + кнопка размеры +аватар wrap

--- a/resume/styles.css
+++ b/resume/styles.css
@@ -8,15 +8,20 @@
   --index: calc(1vw + 1vh);
 }
 
+html,
 body {
-  background-image: url('../img/layer-1.jpg');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-  background-position: center;
-  font-size: 15px;
-  height: 100vh;
-  width: 100vw;
+  position: relative;
+}
+
+body::before {
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url('../img/layer-1.jpg') center/cover no-repeat;
+  z-index: -1;
 }
 
 .rain {
@@ -35,7 +40,6 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 0 auto;
 }
 
 .item {
@@ -49,33 +53,25 @@ body {
   transition: all 1s ease;
 }
 
-.card1 {
-  display: flex;
-  flex-wrap: nowrap;
-  border-radius: 28px;
-  box-shadow: 4px 4px 14px rgba(0, 0, 0, 0.25);
-  padding: 20px;
-  gap: 30px;
-}
-
-.card2 {
-  display: flex;
-  flex-wrap: wrap;
-  background-color: #00000070;
-  border-radius: 28px;
-  box-shadow: 4px 4px 14px rgba(0, 0, 0, 0.25);
-  padding: 20px;
-  gap: 30px;
-}
-
+.card1,
+.card2,
 .card3 {
   display: flex;
-  flex-wrap: wrap;
-  background-color: #00000070;
   border-radius: 28px;
   box-shadow: 4px 4px 14px rgba(0, 0, 0, 0.25);
   padding: 20px;
   gap: 30px;
+}
+
+.card1 {
+  flex-wrap: wrap;
+  margin-top: 50px;
+}
+
+.card2,
+.card3 {
+  flex-wrap: wrap;
+  background-color: #00000070;
 }
 
 .avatar {
@@ -83,7 +79,7 @@ body {
   max-width: 200px;
   border-radius: 28px;
   box-shadow: 4px 4px 14px rgba(0, 0, 0, 0.25);
-  margin: 0auto;
+  margin: 0 auto;
 }
 
 .info-text {
@@ -95,9 +91,11 @@ body {
 }
 
 .main-button {
-  position: relative;
-  padding: calc(var(--index) * 0.5);
-  font-size: calc(var(--index) * 1.3);
+  position: absolute;
+  font-size: 1.5rem;
+  margin: 2px;
+  font-weight: bold;
+  padding: calc(var(--index) * 0.8);
   color: #fff;
   text-shadow: 0 0 10px #8da657;
   background-color: #0000008b;
@@ -105,7 +103,6 @@ body {
   border-radius: 8%;
   outline: none;
   cursor: pointer;
-  margin-bottom: 40px;
 }
 
 .main-button:hover {
